Fix folder structure

--- a/src/RadioPanel/MainWindow.xaml
+++ b/src/RadioPanel/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RadioPanel" xmlns:wpfmaskedtextbox="clr-namespace:WPFMaskedTextBox;assembly=WPFMaskedTextBox"
+        xmlns:local="clr-namespace:RadioPanel" xmlns:wpfmaskedtextbox="clr-namespace:WPFMaskedTextBox;assembly=WPFMaskedTextBox" xmlns:models="clr-namespace:RadioPanel.Models"
         mc:Ignorable="d"
         Height="130" Width="460" 
         WindowStyle="None" 
@@ -22,7 +22,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid.DataContext>
-                <local:RadioInformation/>
+                <models:RadioInformation/>
             </Grid.DataContext>
             <Grid Grid.Row="0" VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
