--- a/src/RadioPanel/Views/MainWindow.xaml
+++ b/src/RadioPanel/Views/MainWindow.xaml
@@ -1,9 +1,13 @@
-﻿<Window x:Name="RadioPanel" x:Class="RadioPanel.MainWindow"
+﻿<Window x:Name="RadioPanel" x:Class="RadioPanel.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RadioPanel" xmlns:wpfmaskedtextbox="clr-namespace:WPFMaskedTextBox;assembly=WPFMaskedTextBox" xmlns:models="clr-namespace:RadioPanel.Models"
+        xmlns:wpfmaskedtextbox="clr-namespace:WPFMaskedTextBox;assembly=WPFMaskedTextBox" 
+        xmlns:local="clr-namespace:RadioPanel"
+        xmlns:controls="clr-namespace:RadioPanel.Controls" 
+        xmlns:viewmodels="clr-namespace:RadioPanel.ViewModels" 
+        d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
         Height="130" Width="460" 
         WindowStyle="None" 
@@ -21,9 +25,6 @@
                 <RowDefinition Height="10"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid.DataContext>
-                <models:RadioInformation/>
-            </Grid.DataContext>
             <Grid Grid.Row="0" VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -36,19 +37,15 @@
                     FontFamily="/Fonts/#Orbitron"
                     FontWeight="ExtraBold"
                     Foreground="AntiqueWhite"
-                    MouseDown="RadioPanel_MouseDown">
+                    MouseDown="RadioPanel_MouseDown"
+                    VerticalAlignment="Center">
                     RADIO PANEL
                 </TextBlock>
-                <Button Grid.Column="2"
-                    x:Name="btnExitOff"
-                    BorderThickness="0"
-                    Background="Transparent"
-                    Click="Exit_Click">
-                    <Image x:Name="imgExitOff"
-                        VerticalAlignment="Top"
-                        HorizontalAlignment="Center"
-                        Width="25" Source="/Images/power.png"/>
-                </Button>
+                <controls:CanvasButton Click="Exit_Click"
+                    Grid.Column="2" 
+                    VerticalAlignment="Center"
+                    Foreground="AntiqueWhite"
+                    HoverForeground="Red" />
             </Grid>
             <Grid Grid.Row="1">
                 <TextBlock Grid.Column="1"
@@ -68,7 +65,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="10"/>
                     <ColumnDefinition Width="15*"/>
-                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="70"/>
                     <ColumnDefinition Width="16*"/>
                 </Grid.ColumnDefinitions>
                 <wpfmaskedtextbox:MaskedTextBox x:Name="txtCom"
@@ -85,38 +82,28 @@
                     Cursor="Arrow"
                     Text="{Binding Com1, FallbackValue=122.800, Mode=OneWay}" Grid.ColumnSpan="2">
                 </wpfmaskedtextbox:MaskedTextBox>
-                <Button x:Name="btnSwitch"
+                <controls:CanvasButton
                     Grid.Column="2"
-                    Background="Transparent"
-                    BorderThickness="0" Margin="20,8,20,8"
-                    Click="Switch_Click">
-                    <Border 
-                        Background="White"
-                        CornerRadius="10"
-                        Padding="5">
-                        <Image 
-                            VerticalAlignment="Top"
-                            HorizontalAlignment="Center"
-                            Stretch="Uniform" Source="/Images/switch.png"/>
-                    </Border>
-                </Button>
-                <wpfmaskedtextbox:MaskedTextBox x:Name="txtComSTBY"
+                    IconData="{x:Static local:Icons.SwapBold}"
+                    VerticalAlignment="Center"
+                    Foreground="AntiqueWhite"
+                    HoverForeground="#FF0063B6" 
+                    Command="{Binding SwapCom1FrequencyCommand}"/>
+                <controls:RadioEditBox x:Name="txtComSTBY" 
                     Grid.Column="3"
                     FontFamily="/Fonts/#Orbitron"
                     FontWeight="ExtraBold"
                     FontSize="28"
+                    Cursor="Arrow"
                     Foreground="White"
                     Background="Transparent"
                     TextAlignment="Center"
                     VerticalAlignment="Center"
-                    PromptChar="0"
-                    Mask="000,000"
-                    Cursor="Arrow"
-                    KeyDown="ComSTBY_KeyDown" 
-                    GotFocus="SelectText"
-                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton"
-                    Text="{Binding Com1Stby, FallbackValue=122.800, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" InputScope="Digits">
-                </wpfmaskedtextbox:MaskedTextBox>
+                    Text="{Binding Com1Stby, FallbackValue=122.800}"
+                    CommandKey="Enter"
+                    Command="{Binding SetCom1StandbyFrequencyCommand}"
+                    ResetKey="Esc"
+                />
             </Grid>
         </Grid>
     </Border>
